--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-swipe": "^6.0.3",
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "swipe-js-iso": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
